--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,15 +28,27 @@
     "node"
   ],
   "rules": {
+    // Override base rules
+    "no-process-exit": "off",
+    "no-case-declarations": "off",
     // TypeScript specific
-    "@typescript-eslint/explicit-function-return-type": "error",
-    "@typescript-eslint/no-explicit-any": "error",
+    "@typescript-eslint/explicit-function-return-type": "off",
+    "@typescript-eslint/no-explicit-any": "warn",
     "@typescript-eslint/no-unused-vars": ["error", { "argsIgnorePattern": "^_" }],
     "@typescript-eslint/no-floating-promises": "error",
-    "@typescript-eslint/no-misused-promises": "error",
+    "@typescript-eslint/no-misused-promises": "off",
     "@typescript-eslint/await-thenable": "error",
     "@typescript-eslint/no-unnecessary-type-assertion": "error",
-    "@typescript-eslint/restrict-template-expressions": "error",
+    "@typescript-eslint/restrict-template-expressions": "off",
+    "@typescript-eslint/require-await": "off",
+    "@typescript-eslint/no-unsafe-member-access": "off",
+    "@typescript-eslint/no-unsafe-assignment": "off",
+    "@typescript-eslint/no-unsafe-argument": "off",
+    "@typescript-eslint/no-unsafe-return": "off",
+    "@typescript-eslint/no-unsafe-call": "off",
+    "@typescript-eslint/no-unsafe-enum-comparison": "off",
+    "@typescript-eslint/no-base-to-string": "off",
+    "@typescript-eslint/unbound-method": "off",
     
     // Security
     "security/detect-object-injection": "warn",
@@ -50,14 +62,14 @@
     "security/detect-possible-timing-attacks": "warn",
     
     // General best practices
-    "no-console": ["error", { "allow": ["warn", "error"] }],
+    "no-console": "off",
     "no-debugger": "error",
     "no-eval": "error",
     "no-implied-eval": "error",
     "no-new-func": "error",
-    "no-return-await": "error",
+    "no-return-await": "off",
     "prefer-const": "error",
-    "require-await": "error",
+    "require-await": "off",
     
     // Import rules
     "import/order": ["error", {
@@ -66,7 +78,7 @@
       "alphabetize": { "order": "asc" }
     }],
     "import/no-duplicates": "error",
-    "import/no-unresolved": "error",
+    "import/no-unresolved": "off",
     "import/no-cycle": "error",
     
     // Node specific
@@ -74,6 +86,8 @@
     "node/no-missing-import": "off",
     "node/no-unsupported-features/es-syntax": "off",
     "node/no-unpublished-import": "off",
+    "node/no-process-exit": "off",
+    "node/shebang": "off",
     
     // Promise rules
     "promise/always-return": "error",
@@ -83,9 +97,8 @@
   },
   "settings": {
     "import/resolver": {
-      "typescript": {
-        "alwaysTryTypes": true,
-        "project": "./tsconfig.json"
+      "node": {
+        "extensions": [".ts", ".tsx", ".js", ".jsx"]
       }
     }
   },
@@ -94,6 +107,9 @@
     "node_modules/",
     "coverage/",
     "*.js",
-    "*.d.ts"
+    "*.d.ts",
+    "test/",
+    "test-internal/",
+    "jest.config.cjs"
   ]
 }
